apps/services/bitwarden/ingress-admin.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  labels:
    app.kubernetes.io/name: bitwardenrs
  name: bitwarden-ing-admin
  namespace: services
  annotations:
    kubernetes.io/ingress.class: traefik
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.middlewares: services-authelia-auth@kubernetescrd,services-nc-headers@kubernetescrd,kube-system-traefik-errors@kubernetescrd
    external-dns.alpha.kubernetes.io/hostname: bitwarden.technolab.cloud
    external-dns.alpha.kubernetes.io/target: technolab.cloud
spec:
  rules:
  - host: bitwarden.technolab.cloud
    http:
      paths:
      - path: /admin
        backend:
          serviceName: bitwarden-bitwardenrs
          servicePort: http
  tls:
  - hosts:
    - bitwarden.technolab.cloud
    secretName: services-technolab-cloudflare-org-tls
